--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ target/
 SETUP.md
 
 *.md
+
+# VPS deployment files (personal use only)
+docker-compose.prod.yml
+Dockerfile.prod
+deploy.sh
+.env.prod
