feat: migrate Docker configuration from webpack to Vite
- Update Dockerfile.prod to use npm instead of http-server
- Update regular Dockerfile to remove http-server dependency
- Configure Vite with proper CORS headers and host settings
- Update run.bash to use Vite dev server and preview mode
- Add missing Three.js dependencies (inflate.module.min.js, NURBSCurve.js, NURBSUtils.js)
- Fix import paths in local Three.js modules for Vite compatibility

--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "description": "RPG Game with Linera Microchains Integration",
   "main": "index.html",
   "scripts": {
-    "start": "npx http-party/http-server --header Cross-Origin-Embedder-Policy:require-corp --header Cross-Origin-Opener-Policy:same-origin",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["rpg", "game", "linera", "web3", "blockchain"],
+  "keywords": [
+    "rpg",
+    "game",
+    "linera",
+    "web3",
+    "blockchain"
+  ],
   "author": "Akindo",
   "license": "MIT",
   "dependencies": {
     "@linera/client": "^0.15.3"
   },
   "devDependencies": {
-    "http-party": "^https://github.com/http-party/http-server"
+    "vite": "^7.2.2"
   }
 }
